plugins {
    id 'com.android.application'
}

android {
  packagingOptions {
    pickFirst 'META-INF/*'
  }
  namespace 'com.faraz.dictionary'
    compileSdk 34

    defaultConfig {
        applicationId "com.faraz.dictionary"
        minSdk 24
        //noinspection OldTargetApi
        targetSdk 33
        versionCode 1
        versionName "2.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
    //noinspection GradleDependency
    implementation 'androidx.appcompat:appcompat:1.4.1'
    //noinspection GradleDependency
    implementation 'com.google.android.material:material:1.5.0'
    //noinspection GradleDependency
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    //turns out, we do need json-flattener. Another note: we DO need this. Forget about replacing it.
    implementation ('com.github.wnameless.json:json-flattener:0.17.3') {
        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
    }
    //JACKSON is brought in by json-flattener
    //noinspection GradleDependency
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0' //need this version of jackson to work with Android 24
    implementation 'com.mailjet:mailjet-client:5.2.5'
    implementation 'com.sun.mail:android-mail:1.6.7'
    implementation 'com.google.guava:guava:32.1.3-android'
    implementation 'com.tickaroo.tikxml:annotation:0.8.13'
    //noinspection GradleDependency
    implementation 'com.tickaroo.tikxml:core:0.8.13'
    annotationProcessor 'com.tickaroo.tikxml:processor:0.8.13'
}
